tests/purs/failing/1881.purs
-- @shouldFailWith ErrorParsingModule
module Main where

foo =
bar :: Int
bar = 3
