tests/purs/failing/1881.out
Error found:
at tests/purs/failing/1881.purs:5:1 - 5:1 (line 5, column 1 - line 5, column 1)

  Unable to parse module:
  Unexpected or mismatched indentation


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

